--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -31,16 +31,11 @@ jobs:
         run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
       - name: Build release
         run: ./build-release.sh
-      - name: Zip built linux files
+      - name: Zip built files
         run: |
-          cd TranslationSheetEditor/publish-linux-x64
-          zip "translation-sheet-editor-${RELEASE_VERSION}-linux.zip" -r ./
-          cd ../../
-      - name: Zip built windows files
-        run: |
-          cd TranslationSheetEditor/publish-win-x64
-          zip "translation-sheet-editor-${RELEASE_VERSION}-win.zip" -r ./
-          cd ../../
+          cd TranslationSheetEditor/
+          find . -maxdepth 1 -mindepth 1 -type d -name "publish-*" -exec ../zip-release.sh {} $RELEASE_VERSION \;
+          cd ../
       - name: Publish github release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
